  [Edit]->[Paste Special...] sub-menu.

- LFUN_VIEW_CLOSE
  Close the current document view only, if there are no more views
  on the document, either close or hide it (see the new preference
  option \\close_buffer_with_last_view)

The following LyX functions have been removed:

//template, remove this entry later on
- LFUN_NEXT_INSET_TOGGLE ("next-inset-toggle"): use "inset-toggle" instead.


The following LyX functions have been changed:

//template, remove this entry later on
- LFUN_INSET_TOGGLE ("inset-toggle"): For some insets, this function was used 
  to show the settings dialog. This is no longer possible and one should use
  inset-settings for this purpose.
 

The following LyX key bindings have been changed:

//template, remove this entry later on
- LFUN_MATH_MACRO_FOLD ("math-macro-fold")
  The binding to "C-minus" has changed to "C-S-underscore".


Linux desktop file specification and scalable icon has been included
into the tarball.


New external programs and libraries:
------------------------------------

- LyX links now against libmagic (http://www.darwinsys.com/file/) if it is
  available at compile time. This improves the file format detection of
  included graphics and other files. The old builtin format detection code
  is used if libmagic is not available.


Known issues in version 2.1.0
-----------------------------

- LyX needs to be run under Python 2 and will not work properly on systems
  where Python 3 is the default binary. See bug #7030 to know how to fix
  this properly, since simple sheebang conversion in *.py files will not
  be enough.

Caveats when upgrading from earlier versions to 2.1.x
-------------------------------------------------------

In order to improve reported scrolling slowness, we changed the way screen
painting is done. This, however, can slow down the performance on remote
X connections and we provide RC_USE_QIMAGE variable, which brings back
the old way of painting (when set to false).
