@@ -608,7 +608,7 @@
 <file alias="images/all-changes-accept.png">../../lib/images/all-changes-accept.png</file>
 <file alias="images/banner.png">../../lib/images/banner.png</file>
 <file alias="images/url-insert.png">../../lib/images/url-insert.png</file>
-<file alias="images/close-tab-group.png">../../lib/images/close-tab-group.png</file>
+<file alias="images/tab-group-close.png">../../lib/images/tab-group-close.png</file>
 <file alias="images/tabular-feature_delete-row.png">../../lib/images/tabular-feature_delete-row.png</file>
 <file alias="images/tabular-feature_set-longtabular.png">../../lib/images/tabular-feature_set-longtabular.png</file>
 <file alias="images/buffer-view_pdf2.png">../../lib/images/buffer-view_pdf2.png</file>
