@@ -330,7 +330,7 @@ Menuset
 		Separator
 		Item "Split View Into Left and Right Half|i" "split-view horizontal"
 		Item "Split View Into Upper and Lower Half|e" "split-view vertical"
-		OptItem "Close Current View|w" "close-tab-group"
+		OptItem "Close Current View|w" "tab-group-close"
 		Item "Fullscreen|l" "ui-toggle fullscreen"	
 		Submenu "Toolbars|b" "toolbars"
 		Separator
