@@ -51,7 +51,7 @@ enum FuncCode
 	LFUN_SELECTION_PASTE, // JMarc 2008/12/15
 	LFUN_CUT,
 	LFUN_COPY,
-	LFUN_CLOSE_TAB_GROUP,
+	LFUN_TAB_GROUP_CLOSE,
 	LFUN_NOTE_NEXT,
 	// 20
 	LFUN_INSET_TOGGLE,
